Initial effort to get rid of <table>.  Haven't checked IE6/7 compatibility.

--- a/index.html
+++ b/index.html
@@ -43,6 +43,14 @@ function MM_swapImage() { //v3.0
  </script>
  
 <style type="text/css">
+.body-container {
+    max-width: 960px;
+    margin: 0 auto;
+}
+
+#home-banner {
+    margin-bottom: 32px;
+}
 #main_text {
 	color: #000000;
 	padding-left:30px;
@@ -65,36 +73,73 @@ function MM_swapImage() { //v3.0
 	font-size: 10px;
 }
 
-#event_pic {
+.logo {
+    display: inline-block;
+    vertical-align: top;
+}
+.nav {
+    display: inline-block;
+    vertical-align: top;
+}
+.contacts {
+    display: inline-block;
+    vertical-align: top;
+}
+
+.event_pic {
 	color: #000000;
+    display: inline-block;
+    vertical-align: top;
 	margin-top:30px;
 	margin-left:10px;
-	float: left;
 	margin-right: 10px;
 }
 
-#event_text {
+.event_text {
 	color: #000000;
-	padding-left:30px;
-	padding-right:30px;
-	font-size:13px;
+    display: inline-block;
+    vertical-align: top;
+    max-width: 404px; /*528-74-10*2-30*/
+    font-size: 13px;
 	line-height:1.5;
 	font-family: "微軟正黑體";
 	padding-top: 30px;
 	text-align: left;
 }
 
+.desc-container {
+    position: relative;
+    min-height: 382px;
+}
+.desc-main {
+    margin-top: 0;
+    float: left;
+    width: 432px;
+}
+.desc-event {
+    margin-left:432px;
+}
+
+.page-footer {
+    height: 40;
+    line-height: 40px;
+    max-width: 960px;
+    text-align: center;
+    background: #606060;
+	color: #FFFFFF;
+	font-size: 10px;
+}
+
 </style>
 </head>
-<body bgcolor="#ffffff" onload="MM_preloadImages('images/menu/m01_we are_r.gif','images/menu/m02_we do_r.gif','images/menu/m03_how_r.gif','images/menu/m04_work_r.gif','images/menu/m05_news_r.gif','images/menu/m06_contact_r.gif')"><center>
+<body bgcolor="#ffffff" onload="MM_preloadImages('images/menu/m01_we are_r.gif','images/menu/m02_we do_r.gif','images/menu/m03_how_r.gif','images/menu/m04_work_r.gif','images/menu/m05_news_r.gif','images/menu/m06_contact_r.gif')">
+
+<div class="body-container">
 <!-- Save for Web Slices (main.psd) -->
-<table id="___01" width="960" border="0" cellpadding="0" cellspacing="0">
-	<tr>
-		<td height="54" border="0" colspan="12" bgcolor="#FFFFFF"><img src="images/main_01.jpg" width="960" height="54" /></td>
-	</tr>
-	<tr>
-	  <td height="505" colspan="12" border="0" align="center" bgcolor="#FFFFFF">
-      <div id="home-banner" class="webwidget_slideshow_dot">
+
+<img src="images/main_01.jpg" />
+
+<div id="home-banner" class="webwidget_slideshow_dot">
       <ul>
  <li><img src="images/banner/banner-01.jpg" width="960" height="480" alt=""/></a></li>
  <li><img src="images/banner/banner-02.jpg" width="960" height="480" alt=""/></a></li>
@@ -110,44 +155,49 @@ function MM_swapImage() { //v3.0
  <li><img src="images/banner/banner-12.jpg" width="960" height="480" alt=""/></a></li>
  </ul>
             <div style="clear: both"></div>
-    </div><br>
-        <br>
-      </td>
-  </tr>
-	<tr>
-		<td width="233">
-		  <img src="images/logo.jpg" alt="" name="main_02" width="233" height="69" id="main_02" /></td>
-		<td width="98"><a href="we-are.html" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('we are','','images/menu/m01_we are_r.gif',1)"><img src="images/menu/m01_we are.gif" name="we are" width="98" height="69" border="0"  id="we are" /></a></td>
-		<td width="101"><a href="we-do.html" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('we do','','images/menu/m02_we do_r.gif',1)"><img src="images/menu/m02_we do.gif" name="we do" width="101" height="69" border="0" id="we do" /></a></td>
-		<td width="102"><a href="how-do.html" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('how','','images/menu/m03_how_r.gif',1)"><img src="images/menu/m03_how.gif" name="how" width="102" height="69" border="0" id="how" /></a></td>
-		<td width="101"><a href="work.html" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('work','','images/menu/m04_work_r.gif',1)"><img src="images/menu/m04_work.gif" name="work" width="101" height="69" border="0" id="work" /></a></td>
-		<td width="102"><a href="news.html" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('news','','images/menu/m05_news_r.gif',1)"><img src="images/menu/m05_news.gif" name="news" width="102" height="69" border="0" id="news" /></a></td>
-		<td width="101"><a href="contact.html" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('contact','','images/menu/m06_contact_r.gif',1)"><img src="images/menu/m06_contact.gif" name="contact" width="101" height="69" border="0" id="contact" /></a></td>
-		<td width="39"><a href="https://www.facebook.com/pages/唐吉設計規劃/135167979864422" target="_new"><img src="images/menu/m07_fb.gif" alt="" name="to facebook" width="39" height="69" border="0" id="main_09" /></a></td>
-		<td width="33" height="69" bgcolor="#FFFFFF"><a href="mailto:smartwaytw@gmail.com"><img src="images/menu/m08_email-in.gif" width="33" height="69" border="0"/></a></td>
-		<td width="33" height="69" bgcolor="#FFFFFF"><a href="mailto:designsmartway@gmail.com"><img src="images/menu/m09_email-art.gif" width="33" height="69" border="0"/></a></td>
-		<td width="20" height="69" bgcolor="#FFFFFF">&nbsp;</td>
-	</tr>
-	<tr>
-	  <td width="432" height="382" colspan="3" valign="top" border="0">
+</div>
+
+
+<img class="logo" src="images/logo.jpg" alt="" name="main_02" width="233" height="69" id="main_02" /><!--
+--><div class="nav">
+	<a href="we-are.html" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('we are','','images/menu/m01_we are_r.gif',1)"><img src="images/menu/m01_we are.gif" name="we are" width="98" height="69" border="0"  id="we are" /></a><!--
+    --><a href="we-do.html" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('we do','','images/menu/m02_we do_r.gif',1)"><img src="images/menu/m02_we do.gif" name="we do" width="101" height="69" border="0" id="we do" /></a><!--
+    --><a href="how-do.html" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('how','','images/menu/m03_how_r.gif',1)"><img src="images/menu/m03_how.gif" name="how" width="102" height="69" border="0" id="how" /></a><!--
+    --><a href="work.html" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('work','','images/menu/m04_work_r.gif',1)"><img src="images/menu/m04_work.gif" name="work" width="101" height="69" border="0" id="work" /></a><!--
+    --><a href="news.html" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('news','','images/menu/m05_news_r.gif',1)"><img src="images/menu/m05_news.gif" name="news" width="102" height="69" border="0" id="news" /></a><!--
+    --><a href="contact.html" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('contact','','images/menu/m06_contact_r.gif',1)"><img src="images/menu/m06_contact.gif" name="contact" width="101" height="69" border="0" id="contact" /></a>
+</div><!--
+--><div class="contacts">
+	<a href="https://www.facebook.com/pages/唐吉設計規劃/135167979864422" target="_new"><img src="images/menu/m07_fb.gif" alt="" name="to facebook" width="39" height="69" border="0" id="main_09" /></a></td><!--
+	--><a href="mailto:smartwaytw@gmail.com"><img src="images/menu/m08_email-in.gif" width="33" height="69" border="0"/></a></td><!--
+	--><a href="mailto:designsmartway@gmail.com"><img src="images/menu/m09_email-art.gif" width="33" height="69" border="0"/></a></td>
+</div>
+
+<div class="desc-container">
+    <div class="desc-main">
         <p id="main_text">
         光鮮的產品總是能引起人們陣陣的驚嘆聲，總是不惜代價的想獲得這些商品；為什麼會產生這些效應呢？或許有人說是媒體的強勢操作，也或許會有人說是因為產品的新鮮度夠，但事實上這些原因都只是產品成功的部分條件，真正的原因在於成功的品牌包裝。目前所有的商業行為都圍繞著品牌形象與永續經營的話題，擁有一個好品牌以及優良的行銷管理，是每一個企業或是個人都迫切需要的。而建立品牌名確的形象和方向極其重要，確立優質品牌的戰略與架構，並進行理性的品牌延伸擴張，是創建品牌的最終目的。<br />唐吉設計規劃擁有各領域設計專業團隊，以豐富的創意發展更新更好的方式，完整的幫助客戶建立品牌價值。
 
         </p>
         <p id="main_title">Smart way is a good way.</p>
-</td>
-		<td height="382" colspan="8" valign="top"><a href="join us.html"><img id=event_pic src="images/event-01.jpg" width="74" height="74" border="0" alt="join us" /></a>
-        <p id=event_text>Join us<br />
-      我們找尋追求卓越的你</p>
-      <br />
-      <img id=event_pic src="images/event-02.jpg" width="74" height="74" /> <p id=event_text>展場如戰場，唐吉的科技業展覽行銷方案，幫您整裝待發，加強品牌印象，建立客戶信任感，增加銷售訂單。</p><br /></td>
-	</tr>
-	<tr>
-		<td height="36" colspan="12" align="center" bgcolor="#606060"><p>Copyright @ 唐吉設計 All Rights Reserved 2013.</p></td>
-	</tr>
-    
-</table>
+    </div>
+    <div class="desc-event">
+        <div>
+            <a href="join us.html"><img class="event_pic" src="images/event-01.jpg" width="74" height="74" border="0" alt="join us" /></a>
+            <p class="event_text">Join us<br />
+          我們找尋追求卓越的你</p>
+        </div>
+        <div>
+            <img class="event_pic" src="images/event-02.jpg" width="74" height="74" /> <p class="event_text">展場如戰場，唐吉的科技業展覽行銷方案，幫您整裝待發，加強品牌印象，建立客戶信任感，增加銷售訂單。</p>
+        </div>
+    </div>
+</div>
+
+<div class="page-footer">
+    Copyright @ 唐吉設計 All Rights Reserved 2013.
+</div>
 <!-- End Save for Web Slices -->
-</center>
+</div><!-- body-container -->
+
 </body>
 </html>
