Add IE 6/7 hack for inline block and min-height.

--- a/index.html
+++ b/index.html
@@ -76,20 +76,28 @@ function MM_swapImage() { //v3.0
 .logo {
     display: inline-block;
     vertical-align: top;
+    zoom: 1;
+    *display: inline;
 }
 .nav {
     display: inline-block;
     vertical-align: top;
+    zoom: 1;
+    *display: inline;
 }
 .contacts {
     display: inline-block;
     vertical-align: top;
+    zoom: 1;
+    *display: inline;
 }
 
 .event_pic {
 	color: #000000;
     display: inline-block;
     vertical-align: top;
+    zoom: 1;
+    *display: inline;
 	margin-top:30px;
 	margin-left:10px;
 	margin-right: 10px;
@@ -99,6 +107,8 @@ function MM_swapImage() { //v3.0
 	color: #000000;
     display: inline-block;
     vertical-align: top;
+    zoom: 1;
+    *display: inline;
     max-width: 404px; /*528-74-10*2-30*/
     font-size: 13px;
 	line-height:1.5;
@@ -110,6 +120,7 @@ function MM_swapImage() { //v3.0
 .desc-container {
     position: relative;
     min-height: 382px;
+    _height: 382px;
 }
 .desc-main {
     margin-top: 0;
